显示过期任务

--- a/todolist/templates/task_list.html
+++ b/todolist/templates/task_list.html
@@ -1,91 +1,58 @@
-{% for t in tasks %}
-        <tr data-toggle="tooltip" data-placement="top" title="" id="task{{ t.id }}">
-            <td>
-                <p>
-                    <script>
-                        document.getElementById('task{{ t.id }}').title = "时间节点: {{ t.timenode }}";
-                    </script>
-                    {{ t.task }}
-                </p>
-            </td>
-            <td>
-                <a href="#">
-                    <button type="button" class="btn btn-default btn-xs"><span
-                            class="glyphicon glyphicon-{{ t.project_task.icon }}"></span> {{ t.project }}</button>
-                </a>
-            </td>
-            <td>
-                <script>
-                    var timestamp = moment('{{ t.timestamp }}').locale('zh-cn').fromNow();
-                    document.write(timestamp);
-                </script>
-            </td>
-            <td>
-                {% if t.filish %}
-                    <a href="{{ url_for('main.task_unfilish',id=t.id) }}">
-                        <button type="button" class="btn btn-success btn-xs"><span
-                                class="glyphicon glyphicon-ok"></span></button>
-                    </a>
-                {% else %}
-                    <a href="{{ url_for('main.task_filish',id=t.id) }}">
-                        <button type="button" class="btn btn-warning btn-xs"><span
-                                class="glyphicon glyphicon-remove"></span></button>
-                    </a>
-                {% endif %}
-            </td>
-            <td>
-                <div class="dropdown">
+<head>
+    <script src="{{ url_for('static',filename='js/moment-with-locales.js') }}"></script>
+    <!-- Bootstrap -->
+    <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <!-- bootstrap-progressbar -->
+    <link href="{{ url_for('static',filename='css/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',filename='css/square/red.css') }}" rel="stylesheet">
+    <!-- <link href="{{ url_for('static',filename='css/polaris/polaris.css') }}" rel="stylesheet"> -->
+    <script src="{{ url_for('static',filename='js/jquery-3.2.1.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/bootstrap-datetimepicker.min.js') }}"></script>
+    <script src="{{ url_for('static',filename='js/icheck.js') }}"></script>
+</head>
+
+<table class="table table-hover">
+    <thead>
+    <tr>
+        <th style="width: 50%">任务</th>
+        <th style="width: 10%">项目</th>
+        <th style="width: 20%">创建时间</th>
+        <th style="width: 10%">完成？</th>
+        <th style="width: 10%">操作</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for t in tasks %}
+    <tr data-toggle="tooltip" data-placement="top" title="" id="task{{ t.id }}">
+        <td>{{ t.task }}</td>
+        <td>{{ t.project }}</td>
+        <td>{{ t.timestamp }}</td>
+        <td>
+            {% if t.filish %}
+            <a href="{{ url_for('main.task_unfilish',id=t.id) }}">
+                <button type="button" class="btn btn-success btn-xs"><span
+                        class="glyphicon glyphicon-ok"></span></button>
+            </a>
+            {% else %}
+            <a href="{{ url_for('main.task_filish',id=t.id) }}">
+                <button type="button" class="btn btn-warning btn-xs"><span
+                        class="glyphicon glyphicon-remove"></span></button>
+            </a>
+            {% endif %}
+        </td>
+        <td>
+            <div class="dropdown">
                     <a data-toggle="dropdown" href=""><span class="glyphicon glyphicon-edit"></span></a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         <li><a href="#edit{{ t.id }}" data-toggle="modal">编辑任务</a></li>
                         <li><a href="#">删除任务</a></li>
                     </ul>
                 </div>
-            </td>
-        </tr>
-        <div class="modal fade" id="edit{{ t.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-             aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">编辑任务</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form role="form" action="{{ url_for('main.edit_task',id=t.id) }}" method="post">
-                            {{ edit_task_form.csrf_token }}
-                            <div class="form-group">
-                                {{ edit_task_form.task.label }} {{ edit_task_form.task(id="task",class ="form-control",value=t.task) }}
-                            </div>
-                            <div class="form-group">
-                                {{ edit_task_form.project.label }} {{ edit_task_form.project(id="project",class ="form-control",option=t.project) }}
-                            </div>
-                            <div class="form-group">
-                                {{ edit_task_form.title.label }} {{ edit_task_form.title(id="title",class ="form-control",value=t.title) }}
-                            </div>
-                            <div class="form-group">
-                                {{ edit_task_form.timenode.label }} {{ edit_task_form.timenode(id="timenode"+t.id|string,class ="form-control",value=t.timenode) }}
-                            </div>
-                            <div class="form-group">
-                                {{ edit_task_form.priority.label }} {{ edit_task_form.priority(id="priority",class ="form-control",value=t.priority) }}
-                            </div>
-                            <button type="submit" class="btn btn-default" id="submit{{ t.id }}">提交</button>
-                        </form>
-                    </div>
-                    <div class="modal-foter" style="padding: 15px; text-align: right; border-top: 1px solid #e5e5e5;">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                        <button type="submit" class="btn btn-primary" id="ssubmit{{ t.id }}">确定</button>
-                        <script>
-                            $("#ssubmit{{ t.id }}").on("click", function () {
-                                document.getElementById("submit{{ t.id }}").click();
-                            });
-                            document.getElementById("submit{{ t.id }}").style.display = "none";
-                            $("#timenode{{t.id}}").datetimepicker({format: 'yyyy-mm-dd'});
-                        </script>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
+        </td>
+        {% endfor %}
+    </tr>
     </tbody>
 </table>
