--- a/todolist/templates/add-task.html
+++ b/todolist/templates/add-task.html
@@ -26,7 +26,7 @@
                 {% endfor %}
             </div>
             <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.timenode.label }}</span> {{ form.timenode }}
+                <span style="width: 80px;display: inline-block">{{ form.timenode.label }}</span> {{ form.timenode(value=default_timenode) }}
                 {% for err in form.timenode.errors %}
                 <div style="color: red">{{ err }}</div>
                 {% endfor %}
