--- a/todolist/templates/add-task.html
+++ b/todolist/templates/add-task.html
@@ -1,44 +1,74 @@
-<div class="modal-body">
-    <form role="form" method="post">
-        <fieldset>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.task.label }}</span> {{ form.task }}
-                {% for err in form.task.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
+<div class="container">
+    <div class="col-md-12 column">
+        <a id="modal-424161" href="#modal-container-424161" role="button" class="btn btn-primary btn-sm"
+           data-toggle="modal">添加任务</a>
+        <div class="modal fade" id="modal-container-424161" role="dialog" aria-labelledby="myModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="myModalLabel">
+                            添加任务
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="modal-body">
+                            <form role="form" action="/add-task" method="post">
+                                <fieldset>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.task.label }}</span>
+                                        {{ form.task }}
+                                        {% for err in form.task.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.project.label }}</span>
+                                        {{ form.project }}
+                                        {% for err in form.project.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.title.label }}</span>
+                                        {{ form.title }}
+                                        {% for err in form.title.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.new_title.label }}</span>
+                                        {{ form.new_title }}
+                                        {% for err in form.new_title.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.timenode.label }}</span>
+                                        {{ form.timenode(value=default_timenode) }}
+                                        {% for err in form.timenode.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="form-group">
+                                        <span style="width: 80px;display: inline-block">{{ form.priority.label }}</span>
+                                        {{ form.priority }}
+                                        {% for err in form.priority.errors %}
+                                        <div style="color: red">{{ err }}</div>
+                                        {% endfor %}
+                                    </div>
+                                    {{ form.csrf_token }}
+                                    {{ form.submit }}
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.project.label }}</span> {{ form.project }}
-                {% for err in form.project.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block" >{{ form.title.label }}</span> {{ form.title }}
-                {% for err in form.title.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.new_title.label }}</span> {{ form.new_title }}
-                {% for err in form.new_title.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.timenode.label }}</span> {{ form.timenode(value=default_timenode) }}
-                {% for err in form.timenode.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
-            </div>
-            <div class="form-group">
-                <span style="width: 80px;display: inline-block">{{ form.priority.label }}</span> {{ form.priority }}
-                {% for err in form.priority.errors %}
-                <div style="color: red">{{ err }}</div>
-                {% endfor %}
-            </div>
-            {{ form.csrf_token }}
-            {{ form.submit }}
-        </fieldset>
-    </form>
+        </div>
+    </div>
 </div>
