--- a/todolist/templates/task_list.html
+++ b/todolist/templates/task_list.html
@@ -1,27 +1,11 @@
-<head>
-    <script src="{{ url_for('static',filename='js/moment-with-locales.js') }}"></script>
-    <!-- Bootstrap -->
-    <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <!-- bootstrap-progressbar -->
-    <link href="{{ url_for('static',filename='css/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static',filename='css/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static',filename='css/square/red.css') }}" rel="stylesheet">
-    <!-- <link href="{{ url_for('static',filename='css/polaris/polaris.css') }}" rel="stylesheet"> -->
-    <script src="{{ url_for('static',filename='js/jquery-3.2.1.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/bootstrap-datetimepicker.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/icheck.js') }}"></script>
-
-</head>
-
 <table class="table table-hover">
     <thead>
     <tr>
-        <th style="width: 50%">任务</th>
+        <th style="width: 40%">任务</th>
         <th style="width: 10%">项目</th>
         <th style="width: 20%">创建时间</th>
         <th style="width: 10%">完成？</th>
-        <th style="width: 10%">操作</th>
+        <th style="width: 20%">操作</th>
     </tr>
     </thead>
     <tbody>
@@ -44,7 +28,8 @@
             {% endif %}
         </td>
         <td>
-            <button type="button" class="btn btn-primary btn-sm">编辑</button> <button type="button" class="btn btn-danger btn-sm">删除</button>
+            <button type="button" class="btn btn-primary btn-sm">编辑</button>
+            <a href="{{ url_for('main.task_delete',id=t.id) }}"><button type="button" class="btn btn-danger btn-sm">删除</button></a>
         </td>
         {% endfor %}
     </tr>
