--- a/todolist/templates/add-task.html
+++ b/todolist/templates/add-task.html
@@ -20,42 +20,42 @@
                                         <span style="width: 80px;display: inline-block">{{ form.task.label }}</span>
                                         {{ form.task }}
                                         {% for err in form.task.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="form-group">
                                         <span style="width: 80px;display: inline-block">{{ form.project.label }}</span>
                                         {{ form.project }}
                                         {% for err in form.project.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="form-group">
                                         <span style="width: 80px;display: inline-block">{{ form.title.label }}</span>
                                         {{ form.title }}
                                         {% for err in form.title.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="form-group">
                                         <span style="width: 80px;display: inline-block">{{ form.new_title.label }}</span>
                                         {{ form.new_title }}
                                         {% for err in form.new_title.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="form-group">
                                         <span style="width: 80px;display: inline-block">{{ form.timenode.label }}</span>
-                                        {{ form.timenode(value=default_timenode) }}
+                                        {{ form.timenode }}
                                         {% for err in form.timenode.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     <div class="form-group">
                                         <span style="width: 80px;display: inline-block">{{ form.priority.label }}</span>
                                         {{ form.priority }}
                                         {% for err in form.priority.errors %}
-                                        <div style="color: red">{{ err }}</div>
+                                            <div style="color: red">{{ err }}</div>
                                         {% endfor %}
                                     </div>
                                     {{ form.csrf_token }}
@@ -72,3 +72,11 @@
         </div>
     </div>
 </div>
+<script>
+    //执行一个laydate实例
+    laydate.render({
+        elem: document.getElementById('laydate') //指定元素
+    });
+</script>
+<script src="{{ url_for('static', filename='laydate/laydate.js') }}"></script>
+
