--- a/todolist/templates/today.html
+++ b/todolist/templates/today.html
@@ -15,7 +15,7 @@
         <p>今天
             <small style="color: darkcyan">
                 <script>
-                    var time = moment('{{ now }}').locale('zh-cn').format('YYYY dddd MMMDo');
+                    var time = moment('{{ now }}').locale('zh-cn').format('dddd MMMDo');
                     document.write(time);
                 </script>
             </small>
